# fastapi-bootstrap

./: README.md  pyproject.toml
.github/workflows/: build-and-publish-to-ghcr.yml  lint.yml  test.yml
docker/api_proxy/: .dockerignore  Dockerfile
docker/api_server/: Dockerfile
docker/otel_collector/: Dockerfile
src/fastapi_bootstrap/api_server/: main.py
src/fastapi_bootstrap/api_server/config/: api_server.config.json
src/fastapi_bootstrap/api_server/middleware/: base.py  cors.py  opentelemetry.py  responsetime.py
src/fastapi_bootstrap/api_server/monitoring/: logutils.py
src/fastapi_bootstrap/api_server/routers/: authentication.py  calculator.py
tests/: conftest.py
