[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-bootstrap"
dynamic = ["version"]
description = 'fastapi-bootstrap is a sample app that demonstrates how to use FastAPI with Hatch, NGINX, OTEL, and Docker.'
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0"
keywords = ["fastapi", "hatch", "nginx", "otel", "docker", "bootstrap"]
authors = [
  { name = "Hugo Batista"},
]
classifiers = [
  "Operating System :: OS Independent",
  "Topic :: Software Development",
  "Topic :: Utilities",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "fastapi>=0.115.6",
  "python_multipart>=0.0.20",
  "uvicorn>=0.34.0",
  "opentelemetry-distro>=0.50b0",
  "opentelemetry-instrumentation-logging>=0.50b0",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-exporter-otlp>=1.29.0",
  "aiohttp>=3.10.5",
]
[tool.hatch.metadata]
allow-direct-references = true


[project.scripts]
api-server = "fastapi_bootstrap.api_server:entrypoint"

[tool.uv]
required-version = "0.11.18"
exclude-newer = "30 days"

[dependency-groups]
lint = [
    "mypy>=1.0.0",
    "ruff>=0.0.243",
]
test = [
    "coverage[toml]>=6.5",
    "httpx",
    "pytest",
    "pytest-cov",
]
dev = [
    "hatch>=1.16.5",
    {include-group = "lint"},
    {include-group = "test"},
]

[project.urls]
Documentation = "https://go.hugobatista.com/github/fastapi-bootstrap#readme"
Issues = "https://go.hugobatista.com/github/fastapi-bootstrap/issues"
Source = "https://go.hugobatista.com/github/fastapi-bootstrap"

[tool.hatch.version]
path = "src/fastapi_bootstrap/api_server/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_bootstrap"]
exclude = ["tests"]

[tool.hatch.build.targets.sdist]
only-include = ["src/fastapi_bootstrap", "README.md"]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"

# Pre-install dependencies that are not available on PyPI
pre-install-commands = [
   "python -c \"import glob, subprocess; [subprocess.run(['uv', 'pip', 'install', whl]) for whl in glob.glob('.dependencies/*.whl')]\"",
]

[tool.hatch.envs.default.scripts]
lint = "ruff check . --fix"
format = "ruff format ."
lint-check = "ruff check ."
format-check = "ruff format --check ."
test = "pytest"
typecheck = "mypy"
validate = ["lint", "format", "test", "typecheck"]
check = ["lint-check", "format-check", "test", "typecheck"]

[tool.ruff]
target-version = "py313"
line-length = 100
lint.select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  # Ignore Import block is un-sorted or un-formatted
  "I001",
  # Ignore function call in argument defaults
  "B008",
]
lint.unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["fastapi_bootstrap"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source_pkgs = ["fastapi_bootstrap", "tests"]
branch = true
parallel = true
omit = [
  "src/fastapi_bootstrap/api_server/__about__.py",
]

[tool.coverage.paths]
fastapi_bootstrap = ["src/fastapi_bootstrap", "*/fastapi-bootstrap/src/fastapi_bootstrap"]
tests = ["tests", "*/fastapi_bootstrap/tests"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 100
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
addopts = "-v"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
incremental = false
files = ["src"]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["opentelemetry.*", "aiohttp.*"]
ignore_missing_imports = true
